Fix Content Overflowing Above Footer When Re-sizing Window

--- a/resources/style.css
+++ b/resources/style.css
@@ -60,7 +60,6 @@ header {
 #grid_container {
     display: grid;
     grid-template-columns: 250px 1fr 250px;
-    grid-template-rows: 100vh;
 }
 
 
